# boluo

./: .dockerignore  .editorconfig  .env  .env.local.example  .env.local.template  .env.template  .envrc  .envrc.recommended  .eslintrc.js  .gitattributes  .gitignore  .graphqlconfig  .prettierignore  .prettierrc  .prettierrc.mjs  .rustfmt.toml  .syncpackrc.json  .taplo.toml  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  babel.config.json  build.sh  crowdin.yml  docker-compose.override.example.yml  docker-compose.yaml  docker-compose.yml  dprint.json  flake.nix  justfile  nginx.conf  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  prettier.config.mjs  (+8 more)
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/bridge/: Cargo.toml  bridge.example.json  bridge.example.kdl  sqlx.toml
apps/bridge/.sqlx/: query-1d405bb884eb9aaf50aaae0b2ae9c71d54710d586fcd014bdbbe2cdaa66d8809.json  query-2a93a362e2454686b8536caf97f5d764aeb60eef80c7fe14217222f7d68eee35.json  query-335767beaf4c7d4c8b516efb977f0bb87a86682770d20f60f9e8d6f6095a259a.json  query-4397bab109f8ac47eba69bbf0a74a6cba2c944c52b813755d55b271e7ecbd31a.json  query-53d10abbf4504a4f182f693c25d0ea377cdee76fdb0d64e89c163330352d8442.json  query-597610c6b247491cab6139ba0e6e066f9eb8dbe38ce69e7157d6565d8aaa292e.json  query-6bd2d4a17d7926c84040a643a8d56e8525d5af1735caf639b2c84d317d6e412c.json  query-703567b48b17990975982a8f20d6bee41ab7b8c8f70a2439234295d7165522fc.json  query-78cee31d8a1a9fd1579eb1397379debe1c08f9ed5bd513b380126fd677b5a4a1.json  query-9d277ad20f49b1e6e23a9a21ebe971d340dff88450dee7233d053350446121b4.json  query-b10611ba70f1f48110cd2abe067b1481649aeb6d9a9b399139d0e26a61ee2b92.json  query-b840791e8683e7e85513ccb0f54c5d50f194173c5ad50125b7be521bace06272.json  query-ba0f17c3bfd96d025e2181cfddd7a0a9b415607b9670e325f122e1c5f39f38a9.json  query-c1ffc22b108161e60a63d59b0799c458c5fcfb34d5952e4795d280460fa3af59.json  query-c3a19f7b0810d2d98404fdb09ca8e97fcc3fdcc35d241e7e36320526387c741c.json  query-c9b29324a0d36bf0eb7ae8527bb5f5f3ab87d11b708d15710fcd69f74ff9cb93.json  query-d02413704a70b1d7b1ea07a7fd716f7c0b10bc8a59b87d22f1e6ce08875c4175.json  query-d5eabe8343b5d9a8b1fc169acf509c2b95427fdf236ba2f7651c0a6beb9934c6.json  query-db243aaccb49b17575312da86950524138aa2316652c2508aa4813ba22f9c5f6.json  query-e1d59763ac1af2e16dceacbcdb1337ff5120b697b8033301a9901dd3060f3c21.json  query-f3e7ab3e11a207ed7c4f2088c89bb7137b2c0351572eec89b1437f28b7f3cc5a.json  query-f56314765d6abdb4b333bcd636f9a712e1d80b9a00fb652170ad14fbe3d8ca08.json  query-fd21cacc5b35cd0612213ea21c03e6bce3e0e4df3ff64f4cf77fb7a8723e8ad3.json
apps/bridge/migrations/: 0001_initial.sql  0002_message_map.sql
apps/bridge/sql/: bindings.sql  boluo_message_by_tg.sql  channel_for_topic.sql  clear_cursor.sql  delete_binding.sql  delete_message_map.sql  delete_topic.sql  event_cursor.sql  find_binding_by_chat.sql  find_binding_by_space.sql  foreign_keys.sql  get_topic.sql  insert_binding.sql  insert_message_map.sql  journal_mode.sql  pause_binding.sql  resume_binding.sql  strict_table_count.sql  synchronous.sql  tg_message_by_boluo.sql  topics_for_binding.sql  upsert_cursor.sql  upsert_topic.sql
apps/bridge/src/: boluo.rs  config.rs  main.rs  store.rs  telegram.rs
apps/central-nervous-system/: Cargo.toml  index.html
apps/central-nervous-system/src/: main.rs  nav.rs
apps/manage-cli/: Cargo.toml
apps/manage-cli/src/: list_media.sql  main.rs
apps/server/: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  create-test-database.sh  fly.staging.toml  fly.toml  schema.sql  sqlx.toml
apps/server-experimental/: .gitignore  Cargo.toml
apps/server-experimental/src/: main.rs  server.rs
apps/server/.sqlx/: query-00f370dcac0699dbc93a6f6c06a879de993efe8e0fd2854b469de14cb51a1f0f.json  query-04d4c1300d1b5090f1ac7084f71f3d9c1ee38eb40ed567e861aab00cc978ac9a.json  query-0766d512340cdda690a305b53296c934bc9d2d5e879525e85b0990cba7988d38.json  query-0facd18784e582d6671ca291da6cd45c2ae5ac2d13b3fe34a64f90d44fbcd8a9.json  query-10c1f9c5f9146171bc63432703f636c2792ae1dbb61d74c5d0f1203d8f81ac3d.json  query-121b91156de3230327a7ebcdfd33fb047da5f385ab1c1867884bc13c2f6aaed6.json  query-125ee990b133474be97c36c30b7ec10985c1ff69cdaa360f01d7df6a66fdbd92.json  query-13341fbdff8e5d05e437d625f89bd2dc18e2ebf3bbaa25c0601251c442b6cd0d.json  query-1a9befae1c43ff8d5fc4335836a3f88d263e2334d6b0de186f1db2a7fbbcc8b8.json  query-1ba4b481026b387058471333f08c67f1bd160c635812e6d3d7f7020cc65b7ce3.json  query-1be8a589b2a9d3daee6a3dd69468dbc9343d01014bb45fa5172d7a6b950bbfab.json  query-1eb40a99a8e12c19fcb8016026084371903af066201659c352f706310f6b2826.json  query-219ee3bceec93038c592eff098e015ab4742e217f97ca2da5f4fbd394b4d0f4a.json  query-2cc4d220ac3cd58e9a7190ea25ef98579b3400ba68ca09554b9548d6ff5baa67.json  query-2f944671e34f0ed0fb0e851d460fc47d77f520b5d821c21c360a5c304cd056c1.json  query-2f9c6c26a3a6528df7d236bd17327d1acf3c6690d0d23c5f4bdc39fb06772c29.json  query-3a5dd4d34b018efb82d659e8910a02823016494051075fcc53398983e16d11ee.json  query-3ad09ac8551e1c62146549e5dd2c610c0bd69469d0dab40e9b3781bf5c6e8811.json  query-423721018c577d17c8bd1e0952e57545a0efeb20d683d244ca017b259ae069e0.json  query-43861caa2b0be3814dc7018465a68b0b51ee40b0a12502ba3a17d971f2af31ec.json  query-4430fe06079cc5c3419fc6e3107f319b39546e613919070615e2b7a56962ea7b.json  query-44fed37176de52f49695b21fff3664fb662edeef5b5acb0fd0019c94c93e9de7.json  query-46295614759c22920a050b3465878f9af1cb068816cfd9af2f8b69c40875cbc5.json  query-491a805b45dc111c2b746b57a7a9132a001f55146c4e8e1bd8a0f65eb705d33d.json  query-4b400cca35dc3e729487e70a395f3a46ec6799315b1dd631533f074adea3ecbc.json  query-528860fc93cac111fa3535b4bbea41bd9db785ae3404c143234a0f91fc97b26c.json  query-53751dabe1047e2411160adc9c63f686d66e59d633c4d1fc2e495fa5b609b3a4.json  query-554f4e41e38aa8ceb3a183485996dcbebd99544c2dba5efd8edf09e06d599ae9.json  query-56e6b92c0f14932b6d9dcbd05ffe48a4659718faf83996948ecbb650e55ca736.json  query-585e7c64d314260eef51b4ba62f13ef5176e6d39995baa5a0dc960819d4d7392.json  (+42 more)
apps/server/bindings/: AddChannelMember.ts  (+73 more)
(+2556 files in other folders)
