[workspace]
resolver = "2"
members = ["apps/server", "packages/shared-types"]
metadata.crane.name = "boluo"

[profile.release]
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.24", features = [
  "chrono",
  "collect",
  "derive",
  "serde_json",
  "uuid",
] }
specta-serde = "0.0.11"
specta-typescript = "0.0.11"
