[package]
name = "bridge"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
frankenstein = { git = "https://github.com/ayrat555/frankenstein", features = [
  "client-reqwest",
] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.30.0", features = [
  "rustls-tls-webpki-roots",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3"
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
kdl = "6"
sqlx = { version = "0.9.0", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "uuid",
  "macros",
  "migrate",
  "sqlx-toml",
] }
shared-types = { version = "0.1.0", path = "../../packages/shared-types" }
generated = { version = "0.1.0", path = "../../packages/generated" }
anyhow = "1"
clap = { version = "4.4.12", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
