[package]
name = "server"
version = "0.1.0"
authors = ["uonr"]
default-run = "server"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"


[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1.17.0"
base64 = "0.22"
blake3 = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4.12", features = ["derive"] }
cookie = "0.18"
crc32fast = "1.3"
dotenv = "0.15"
futures = "0.3"
itertools = "0.12"
log = "0.4"
mime = "0.3"
percent-encoding = "2.2.0"
regex = "1"
ring = "0.17"
serde_json = "1.0"
serde_repr = "0.1"
serde_urlencoded = "0.7"
sysinfo = "0.30.5"
thiserror = "1.0"
tokio-stream = "0.1"
tokio-tungstenite = "0.21"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }


[dependencies.ts-rs]
version = "7"
features = ["serde-compat", "uuid-impl", "chrono-impl"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.hyper]
version = "0.14"
features = ["server", "http1", "http2", "runtime", "stream"]

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"]

[dependencies.uuid]
version = "1"
features = ["serde", "v1", "v4"]

[dependencies.tokio]
version = "1"
features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "net",
  "time",
  "process",
  "macros",
  "sync",
  "signal",
  "fs",
  "parking_lot",
]

[dependencies.redis]
version = "0.25"
default-features = false
features = ["connection-manager", "tokio-rustls-comp"]

[dependencies.fern]
version = "0.6"
features = ["colored"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
