[package]
name = "server"
version = "0.1.0"
authors = ["uonr"]
default-run = "server"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "init"
path = "src/init.rs"

[build-dependencies]
dotenvy = "0.15"

[dependencies]
anyhow = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1.17.0"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4.12", features = ["derive", "env"] }
cookie = "0.18"
dotenvy = "0.15"
futures = "0.3"
hex = "0.4"
itertools = "0.14"
tracing = { version = "0.1", features = ["attributes"] }
percent-encoding = "2.2.0"
regex = "1"
ring = "0.17"
serde_json = "1.0"
serde_urlencoded = "0.7"
url = "2.5"
thiserror = "2.0"
tokio-stream = "0.1"
tokio-tungstenite = "0.28"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.7", features = ["full"] }
arc-swap = "1.7.1"
quick_cache = "0.6.9"
papaya = "0.2.1"
ahash = "0.8.11"
parking_lot = "0.12.3"
specta = { version = "2.0.0-rc.22", features = [
  "chrono",
  "derive",
  "export",
  "serde",
  "serde_json",
  "uuid",
] }
specta-typescript = "0.0.9"
shared-types = { version = "0.1.0", path = "../../packages/shared-types" }
governor = "0.10.0"
mimalloc = "0.1.46"
redis = { version = "0.32.2", features = [
  "streams",
  "ahash",
  "tokio-comp",
  "tcp_nodelay",
  "connection-manager",
] }
smallvec = "1.15.1"
tokio-metrics = { version = "0.4.3", features = ["metrics-rs-integration"] }
metrics-exporter-prometheus = "0.17.2"
metrics = "0.24"
netstat2 = "0.11.1"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.hyper]
version = "1.4.1"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.uuid]
version = "1"
features = ["serde", "v1", "v4"]

[dependencies.tokio]
version = "1"
features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "net",
  "time",
  "process",
  "macros",
  "sync",
  "signal",
  "fs",
  "parking_lot",
]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "time", "fmt", "chrono"]

[dependencies.num-rational]
version = "0.4.2"
features = ["std"]
default-features = false
